syntax = "proto3";

package borealis.v1beta1;

option go_package = "/proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service Info {
  rpc GetClusters(GetClustersRequest) returns (GetClustersResponse) {
    option (google.api.http) = {
      post: "/v0/info/GetClusters"
      body: "*"
    };
  };
}

message GetClustersRequest {
}

message GetClustersResponse {
  repeated Cluster clusters = 1;
}

message Cluster {
  string id = 2;
  string name = 1;
  string hostname = 3;
  string port = 4;
  string status = 5;
  string status_error = 6;
}